--- a/templates/payment_success.html
+++ b/templates/payment_success.html
@@ -5,7 +5,13 @@
     <div class="alert alert-success">
         <h4>Оплата прошла успешно!</h4>
         <p>Спасибо за покупку книги "{{ book.Title }}".</p>
-        <p>Сумма: ${{ "%.2f"|format(book.Cost) }}</p>
+        <p>Сумма: 
+            {% if book.Cost is number %}
+                ${{ "%.2f"|format(book.Cost) }}
+            {% else %}
+                ${{ "%.2f"|format(book.Cost|float) }}
+            {% endif %}
+        </p>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 {% for message in messages %}
