--- a/templates/Registration.html
+++ b/templates/Registration.html
@@ -35,7 +35,13 @@
                                    placeholder="Введите логин" required>
                             <div class="invalid-feedback">Пожалуйста, введите логин</div>
                         </div>
-                        
+                        <div class="mb-4">
+                            <label for="Email" class="form-label">email</label>
+                            <input type="email" id="Email" name="Email" 
+                                   class="form-control bg-dark text-light border-secondary" 
+                                   placeholder="Введите email" required>
+                            <div class="invalid-feedback">Пожалуйста, введите email</div>
+                        </div>
                         <div class="mb-4">
                             <label for="Password" class="form-label">Пароль</label>
                             <input type="password" id="Password" name="Password" 
