--- a/templates/Bookmarks.html
+++ b/templates/Bookmarks.html
@@ -42,7 +42,7 @@
                             </h5>
                         </div>
                         <div class="mt-auto text-center">
-                            <a href="{{ url_for('book_detail', id=book.id) }}" class="btn btn-gold w-100 py-2">
+                            <a href="{{ url_for('book_detail', id=bookmark.book.id) }}" class="btn btn-gold w-100 py-2">
                                 <i class="bi bi-info-circle me-2"></i>Подробнее
                             </a>
                         </div>
