--- a/templates/base.html
+++ b/templates/base.html
@@ -224,7 +224,7 @@
                         </li>
                         <li class="mb-2">
                             <i class="fas fa-envelope me-2" style="color: #d6a82a;"></i>
-                            appbooks@gmail.com
+                            bookappex@gmail.com
                         </li>
                     </ul>
                 </div>
